--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -1,8 +1,14 @@
+.formListContainer {
+    padding-top: 300px;
+}
+
 .formList {
     display: flex;
     flex-direction: column;
     row-gap: 20px;
     padding-top: 300px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .formTitle {
@@ -10,13 +16,7 @@
 }
 
 .buttonDelete {
-    background-color: rgb(177, 164, 110);
     width: 280px;
     margin-left: auto;
     margin-right: auto;
-    border-radius: 5px;
-}
-
-.buttonDelete:hover {
-  background-color: rgb(150, 138, 94);
 }
