--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,23 +1,87 @@
 .containerHero {
-    background-color: rgb(185, 172, 115);
-    padding-top: 470px;
-    padding-bottom: 355px;
+    display: flex;
+    justify-content: center;
+    column-gap: 100px;
+
+    background-color: #0E0D20;
+    padding-top: 180px;
+    padding-bottom: 100vw;
     
     width: 100%;
 
-    background-image: url('../../img//gIkuu.png');
     background-size: 40px;
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center bottom;
 }
 
-.titleHero {
-    color: rgb(201, 187, 125);
-    font-size: 80px;
+.containerHeroDescription {
+    width: 650px;
+    background-color: #0f0e22;
+
+    border-radius: 12px;
+    border: 3px solid #131229;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+    padding: 30px;
 }
 
-.textHero {
-    color: rgb(51, 51, 51);
-    font-size: 20px;
+.descriptionTitleHero {
+    color: #676581;
+    font-size: 45px;
+
+    margin-bottom: 20px;
+}
+
+.descriptionTextHero {
+    color: #676581;
+    font-size: 22px;
+    text-align: justify;
+
+    margin-bottom: 40px;
+}
+
+.registerHeroButton {
+    display: flex;
+    color: #403f63;
+    justify-content: center;
+    font-size: 23px;
+    background-color: #1d1b38;
+    border-radius: 12px;
+    padding: 15px 30px;
+    transition: all 0.3s;
+}
+
+.registerHeroButton:hover {
+    color: #f5fac9;
+    background-color: #2a2747;
+}
+
+.containerHeroBenefits {
+    width: 330px;
+    background-color: #0f0e22;
+        
+    border-radius: 12px;
+    border: 3px solid #131229;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
+    padding: 30px;
+}
+
+.benefitsListHero {
+    color: #676581;
+    font-size: 22px;
+    text-align: start;
+}
+
+.benefitsItemHero:not(:last-child) {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.svg {
+    fill: #676581;
+    stroke: none;
+    margin-right: 8px;
 }
