--- a/src/components/RegistrationForm/RegistrationForm.module.css
+++ b/src/components/RegistrationForm/RegistrationForm.module.css
@@ -2,6 +2,15 @@
     padding-top: 300px;
 }
 
+.inputContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .formList {
     display: flex;
     flex-direction: column;
