--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(199, 185, 125);
+
+  background-color: #0E0D20;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
