--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,7 +1,9 @@
 .listItem {
-    border: 2px solid #b9ac6e;
-    border-radius: 7px;
-    padding: 15px;
+    position: relative;
+    border: 3px solid #131229;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    padding: 30px;
     width: 300px;
     margin-bottom: 25px;
 }
@@ -11,10 +13,23 @@
 }
 
 .buttonDelete {
-    background-color: rgb(177, 164, 110);
-    border-radius: 5px;
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    background-color: #282649;                                                                                                                                                                                                                                                                                                  
+    border-radius: 12px;
+    border: 3px solid #131229;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+    transition: all 0.3s;
 }
 
 .buttonDelete:hover {
-    background-color: rgb(150, 138, 94);
+    color: #f5fac9;
+    background-color: #373455;
+}
+
+.iconCross {
+    fill: #9896be;
+    stroke: none;
 }
