--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,10 +1,3 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +32,10 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.container {
+  max-width: 1184px;
+  padding-left: 128px;
+  padding-right: 128px;
 }
