--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
 
-  background-color: #0E0D20;
+  background-color: #fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -14,16 +14,23 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  margin: 0 auto;
+}
+
 a:hover {
   color: #535bf2;
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   margin: 0 auto;
 }
 
 p {
-  margin: 0 auto;
+  margin: 0;
 }
 
 ul {
@@ -33,9 +40,9 @@ ul {
 }
 
 #root {
-  max-width: 100vw;
-  padding: 0;
-  margin: 0;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 a {
@@ -56,7 +63,6 @@ button {
   font-family: inherit;
   cursor: pointer;
 }
-
 
 @media (prefers-color-scheme: light) {
   :root {
