--- a/src/index.css
+++ b/src/index.css
@@ -19,14 +19,14 @@ body {
 }
 
 a:hover {
-  color: #535bf2;
+  color: rgb(189, 189, 189);
 }
 
 h1,
 h2,
 h3,
 h4 {
-  margin: 0 auto;
+  margin: 0;
 }
 
 p {
