--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,17 +1,21 @@
 .containerLogout {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
+  margin-left: auto;
 }
 
 .buttonLogout {
-    background-color: #0E0D20;
-    margin-right: 50px;
+  background-color: #121417;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 125%;
+  color: #fff;
+  border-radius: 12px;
+  padding: 14px 39px;
 }
 
 .userName {
-    align-items: center;
-    display: flex;
-    font-size: 20px;
-    margin-right: 50px;
+  align-items: center;
+  display: flex;
+  font-size: 20px;
 }
-
